--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<n3k-grid>
+  <n3k-header>Header</n3k-header>
+  <router-outlet></router-outlet>
+  <n3k-footer>Footer</n3k-footer>
+</n3k-grid>
